--- a/app/src/main/res/layout/view_holder_category.xml
+++ b/app/src/main/res/layout/view_holder_category.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/tv_category_name"
-        style="@style/CategoryTitle"
+        style="@style/TextCategoryTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -23,10 +23,11 @@
         android:id="@+id/rv_products"
         android:layout_width="0dp"
         android:layout_height="220dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:clipToPadding="false"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
