--- a/app/src/main/res/layout/view_holder_category.xml
+++ b/app/src/main/res/layout/view_holder_category.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/tv_category_name"
-        style="@style/TextCategoryTitle"
+        style="@style/MyTitle1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
