--- a/app/src/main/res/layout/view_holder_product.xml
+++ b/app/src/main/res/layout/view_holder_product.xml
@@ -28,33 +28,28 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/tv_vh_product_manufacturer"
+                app:layout_constraintBottom_toTopOf="@+id/tv_vh_product_full_name"
                 app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_vh_product_manufacturer"
+                android:id="@+id/tv_vh_product_full_name"
+                style="@style/MyText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/tv_vh_product_model"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:text="Product manufacturer" />
-
-            <TextView
-                android:id="@+id/tv_vh_product_model"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_vh_product_price"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:text="Product model" />
+                tools:text="Product full name" />
 
             <TextView
                 android:id="@+id/tv_vh_product_price"
-                style="@style/TextProductPrice"
+                style="@style/MyTitle2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
